--- a/VidCoder/Themes/Dark.xaml
+++ b/VidCoder/Themes/Dark.xaml
@@ -22,6 +22,7 @@
 		<GradientStop Offset="0.0" Color="#3DAD35" />
 		<GradientStop Offset="1.0" Color="#287223" />
 	</LinearGradientBrush>
+	<SolidColorBrush x:Key="GridViewHeaderBorderBrush" Color="#212121" />
 
 	<SolidColorBrush x:Key="{x:Static SystemColors.WindowBrushKey}" Color="Black" />
 	<SolidColorBrush x:Key="{x:Static SystemColors.WindowTextBrushKey}" Color="White" />
