--- a/VidCoder/Themes/HighContrast.xaml
+++ b/VidCoder/Themes/HighContrast.xaml
@@ -12,10 +12,12 @@
 	<SolidColorBrush x:Key="SpecialTextHighlightedBrush" Color="{x:Static SystemColors.HighlightTextColor}" />
 	<SolidColorBrush x:Key="DescriptiveTextBrush" Color="{x:Static SystemColors.WindowTextColor}" />
 	<SolidColorBrush x:Key="MouseOverBackgroundBrush" Color="{x:Static SystemColors.WindowColor}" />
+	<SolidColorBrush x:Key="SelectedBackgroundBrush" Color="{x:Static SystemColors.HighlightColor}" />
 	<SolidColorBrush x:Key="DisabledControlTextBrush" Color="{x:Static SystemColors.GrayTextColor}" />
 	<SolidColorBrush x:Key="InputBrush" Color="{x:Static SystemColors.WindowColor}" />
 	<SolidColorBrush x:Key="OutputBrush" Color="{x:Static SystemColors.WindowColor}" />
 	<SolidColorBrush x:Key="GridViewHeaderBorderBrush" Color="{x:Static SystemColors.WindowTextColor}" />
+	<SolidColorBrush x:Key="EncodingQueueItemTextBrush" Color="{x:Static SystemColors.WindowTextColor}" />
 
 
 	<SolidColorBrush x:Key="Button.Static.Background" Color="{x:Static SystemColors.ControlColor}"/>
