--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -66,7 +66,7 @@
 		</Style>
 		<Style x:Key="ArrowSeparator" TargetType="Polygon">
 			<Setter Property="Points" Value="0,0 0,10 10,5" />
-			<Setter Property="Fill" Value="Black" />
+			<Setter Property="Fill" Value="{DynamicResource WindowTextBrush}" />
 			<Setter Property="Margin" Value="8 0 8 0" />
 			<Setter Property="VerticalAlignment" Value="Center" />
 		</Style>
