--- a/VidCoder/Themes/Light.xaml
+++ b/VidCoder/Themes/Light.xaml
@@ -54,6 +54,9 @@
 		<GradientStop Offset="0.0" Color="#8FBCF7" />
 		<GradientStop Offset="1.0" Color="#569CF7" />
 	</LinearGradientBrush>
+	<SolidColorBrush x:Key="LogErrorBrush" Color="Red" />
+	<SolidColorBrush x:Key="LogVidCoderBrush" Color="DarkBlue" />
+	<SolidColorBrush x:Key="LogVidCoderWorkerBrush" Color="DarkGreen" />
 
 	<SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#B8E0F3" />
 	<SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black" />
